k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orbo-mate
spec:
  selector:
    app: orbo-mate
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
